# docs/swagger.json
@@ -11,7 +11,7 @@
         "version": "2.0"
     },
     "paths": {
-        "/api/v1/auth/info": {
+        "/api/auth/info": {
             "get": {
                 "description": "用户信息",
                 "consumes": [
@@ -61,7 +61,7 @@
                 }
             }
         },
-        "/api/v1/auth/login": {
+        "/api/auth/login": {
             "post": {
                 "description": "用户登陆",
                 "consumes": [
@@ -106,7 +106,7 @@
                 }
             }
         },
-        "/api/v1/auth/register": {
+        "/api/auth/register": {
             "post": {
                 "description": "用户注册",
                 "consumes": [
@@ -158,7 +158,7 @@
                 }
             }
         },
-        "/api/v1/books": {
+        "/api/books": {
             "get": {
                 "description": "书籍列表",
                 "consumes": [
@@ -262,7 +262,7 @@
                 }
             }
         },
-        "/api/v1/books/{id}": {
+        "/api/books/{id}": {
             "put": {
                 "description": "书籍列表",
                 "consumes": [
@@ -336,7 +336,7 @@
                 }
             }
         },
-        "/api/v1/films": {
+        "/api/films": {
             "get": {
                 "description": "电影列表",
                 "consumes": [
@@ -446,7 +446,7 @@
                 }
             }
         },
-        "/api/v1/films/{id}": {
+        "/api/films/{id}": {
             "put": {
                 "description": "电影列表",
                 "consumes": [
@@ -520,7 +520,7 @@
                 }
             }
         },
-        "/api/v1/getCode": {
+        "/api/getCode": {
             "get": {
                 "description": "获取验证码",
                 "consumes": [
@@ -543,7 +543,7 @@
                 }
             }
         },
-        "/api/v1/upload": {
+        "/api/upload": {
             "post": {
                 "description": "文件上传",
                 "consumes": [
@@ -581,7 +581,7 @@
                 }
             }
         },
-        "/api/v1/users": {
+        "/api/users": {
             "get": {
                 "description": "用户列表",
                 "consumes": [
@@ -638,7 +638,7 @@
                 }
             }
         },
-        "/api/v1/users/{id}": {
+        "/api/users/{id}": {
             "put": {
                 "description": "用户信息",
                 "consumes": [
